WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34393
Cancel button of search input field does not fire input event
https://bugs.webkit.org/show_bug.cgi?id=34393
Summary
Cancel button of search input field does not fire input event
Steven Brown
Reported
2010-01-31 04:28:35 PST
Created
attachment 47791
[details]
Search field input events All other changes to the text of a type="search" input field trigger an input event (inserting or deleting characters, pasting into the field, spell-checker corrections, etc), but clicking on the cancel button within the field does not. The attached file "searchfield.html" demonstrates this: it contains a search field and logs all input events fired from that search field. Reproduced in Google Chrome 4.0.249.78 and Safari 4.0.4 (531.21.10).
Attachments
Search field input events
(500 bytes, text/html)
2010-01-31 04:28 PST
,
Steven Brown
no flags
Details
Patch
(5.54 KB, patch)
2010-07-16 01:20 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Patch
(5.53 KB, patch)
2010-07-16 09:57 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2010-01-31 11:36:42 PST
Confirmed with
r54103
.
Joseph Pecoraro
Comment 2
2010-04-18 23:20:12 PDT
Also, potentially related, if you mousedown on the cancel button, and mouseup on the cancel button the mousedown event will fire, but the mouseup event will not fire.
Alexey Proskuryakov
Comment 3
2010-04-20 16:40:31 PDT
See also:
bug 37789
.
Kent Tamura
Comment 4
2010-07-16 01:20:20 PDT
Created
attachment 61776
[details]
Patch
Erik Arvidsson
Comment 5
2010-07-16 09:18:54 PDT
Comment on
attachment 61776
[details]
Patch
> +++ b/LayoutTests/fast/forms/script-tests/search-cancel-button-events.js > @@ -0,0 +1,37 @@ > +description('Test for the spin control behavior in a type=numnber input.');
The description needs update.
Kent Tamura
Comment 6
2010-07-16 09:57:30 PDT
Created
attachment 61818
[details]
Patch
Ojan Vafai
Comment 7
2010-07-22 16:21:22 PDT
Comment on
attachment 61818
[details]
Patch We should clearly be firing the input event here. Whether we should fire an explicit cancel event is another question. It's not needed in my opinion.
Kent Tamura
Comment 8
2010-07-22 17:43:43 PDT
Comment on
attachment 61818
[details]
Patch Clearing flags on attachment: 61818 Committed
r63929
: <
http://trac.webkit.org/changeset/63929
>
Kent Tamura
Comment 9
2010-07-22 17:43:51 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug