2010-07-22  Kent Tamura  <tkent@chromium.org>

Reviewed by Ojan Vafai.

        Cancel button of search input field should fire input/change events
        https://bugs.webkit.org/show_bug.cgi?id=34393

        * fast/forms/script-tests/search-cancel-button-events.js: Added.
        * fast/forms/search-cancel-button-events-expected.txt: Added.
        * fast/forms/search-cancel-button-events.html: Added.
2010-07-22  Kent Tamura  <tkent@chromium.org>

        Reviewed by Ojan Vafai.

        Cancel button of search input field should fire input/change events
        https://bugs.webkit.org/show_bug.cgi?id=34393

        Test: fast/forms/search-cancel-button-events.html

        * rendering/TextControlInnerElements.cpp:
        (WebCore::SearchFieldCancelButtonElement::defaultEventHandler):

Canonical link: https://commits.webkit.org/54765@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63929 268f45cc-cd09-0410-ab3c-d52691b4dbfc